# Multi-diag

./: CMakeLists.txt  README.md  build.sh  run.sh
src/: cyclic.F90  memory.F90  multi_diag.F90  struct_sptrsv.F90  trd_single.F90
test/: main.F90
